verificacao de digitos ver:1

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <body>
         
         <form>
-           <input  id="entrada"  onkeyup="recupera" type="text">
+           <input  id="entrada"  onkeyup="recupera()" type="text">
 
-            <input id="saida" type="text"> 
+            <input id="saida" type="text" disabled> 
         </form>
         
 
